# ml-in-stat-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  deps.md  notes.md
experiments/: a.out  checkers.txt  compile_commands.json  error-parser.py  exp.c  exp.h  exp.plist  log.txt  res.csv  res.txt  res.xml  run-juliet.sh
experiments/data--7183197326695536496/: data.csv
experiments/reports-ctu/: CWE416_Use_After_Free__malloc_free_int_01.c_clang-tidy_0559ac51e9578fb5f237ca741923508f.plist  CWE416_Use_After_Free__malloc_free_int_01.c_clangsa_0559ac51e9578fb5f237ca741923508f.plist  exp.c_clang-tidy_fffb2fd6573c3e0ffd2aeb7aeceb62c6.plist  exp.c_clangsa_fffb2fd6573c3e0ffd2aeb7aeceb62c6.plist  io.c_clang-tidy_b4f6549b41347bba6055d967e807d1ea.plist  io.c_clangsa_b4f6549b41347bba6055d967e807d1ea.plist  metadata.json  unique_compile_commands.json
experiments/reports-ctu/ctu_connections/: CWE416_Use_After_Free__malloc_free_int_01.c_clangsa_0559ac51e9578fb5f237ca741923508f
experiments/reports-ctu/fixit/: CWE416_Use_After_Free__malloc_free_int_01.c_clang-tidy_0559ac51e9578fb5f237ca741923508f.yaml  io.c_clang-tidy_b4f6549b41347bba6055d967e807d1ea.yaml
ml-results/ignore-cwe-with-no-fp-no-metrics/: exp.c
ml-results/ignore-cwe-with-no-fp-no-metrics/data--7183197326695536496/: analyzer-gcc.txt
ml-results/ignore-cwe-with-no-fp-no-tokens/: fmap.tsv
ml-results/no-metrics/: fmap.tsv
ml-results/non-normalized-features/: fmap.tsv
src/: CMakeLists.txt  README.md  data-extractor.py  data-extractor.sh  extract_metrics_random_file.py  extract_metrics_random_file.sh  tree.py
(+13 files in other folders)
